--- a/templates/admin/newsfeeds.html
+++ b/templates/admin/newsfeeds.html
@@ -42,7 +42,7 @@
               <th>title</th>
               <th>user_name</th>
               <th>channel_name</th>
-              <th>layut_type</th>
+              <th>layout_type</th>
               <th>feed_type</th>
               <th>video_time</th>
               <th>创建时间</th>
@@ -55,7 +55,7 @@
               <td>{{newsfeed.post1_title or "/"}}</td>
               <td>{{newsfeed.user_name or "/"}}</td>
               <td>{{newsfeed.channel_name or "/"}}</td>
-              <td>{{newsfeed.layut_type or "/"}}</td>
+              <td>{{newsfeed.layout_type or "/"}}</td>
               <td>{{newsfeed.feed_type or "/"}}</td>
               <td>{{newsfeed.video_time or "/"}}</td>
               <td>{{newsfeed.created or "/"}}</td>
