--- a/templates/post.html
+++ b/templates/post.html
@@ -12,7 +12,7 @@
                             <!--no cache-->
                             <article data-id="17145771" class="news-feed-item" data-pos="1">
                                 <div class="o-single-content" id="single-content-wrapper">
-                                    <div id="article-header" class="o-single-content__header" style='background-image: {{post.cover}}'>
+                                    <div id="article-header" class="o-single-content__header" style='background-image: url({{post.cover}})'>
                                         <div class="o-single-content__body c-single-normal__header">
                                             <div class="c-article-header-meta">
                                                 <span class="c-article-header-meta__category">越野</span>
