--- a/templates/index.html
+++ b/templates/index.html
@@ -2461,9 +2461,9 @@
                                             <div class="img-wrap">
                                                 <a href="/p/{{all_newsfeeds.list[0].post1_id}}">
                                                     <picture>
-                                                        <source srcset="{{all_newsfeeds.list[0].post1_cover}}" media="(max-width: 375px)">
-                                                        <source srcset="{{all_newsfeeds.list[0].post1_cover}}" media="(min-width: 376px)">
-                                                        <img data-default-src="{{all_newsfeeds.list[0].post1_cover}}" data-image-container=".feed-item-figure" src="{{all_newsfeeds.list[0].post1_cover}}"></picture>
+                                                        <source srcset="{{all_newsfeeds.list[0].post1_cover}}?imageView2/1/w/678/h/272/interlace/1/q/100" media="(max-width: 375px)">
+                                                        <source srcset="{{all_newsfeeds.list[0].post1_cover}}?imageView2/1/w/678/h/272/interlace/1/q/100" media="(min-width: 376px)">
+                                                        <img data-default-src="{{all_newsfeeds.list[0].post1_cover}}?imageView2/1/w/678/h/272/interlace/1/q/100" data-image-container=".feed-item-figure" src="{{all_newsfeeds.list[0].post1_cover}}?imageView2/1/w/678/h/272/interlace/1/q/100"></picture>
                                                 </a>
                                             </div>
                                             <span class="credit">
@@ -2611,9 +2611,9 @@
                                             <div class="img-wrap">
                                                 <a href="/p/{{feed.post1_id}}" data-sport="null">
                                                     <picture>
-                                                        <source srcset="{{feed.post1_cover}}" media="(max-width: 375px)">
-                                                        <source srcset="{{feed.post1_cover}}" media="(min-width: 376px)">
-                                                        <img data-default-src="{{feed.post1_cover}}" class=" lazyloaded" data-image-container=".feed-item-figure"></picture>
+                                                        <source srcset="{{feed.post1_cover}}?imageView2/1/w/642/h/257/interlace/1/q/100" media="(max-width: 375px)">
+                                                        <source srcset="{{feed.post1_cover}}?imageView2/1/w/642/h/257/interlace/1/q/100" media="(min-width: 376px)">
+                                                        <img data-default-src="{{feed.post1_cover}}?imageView2/1/w/642/h/257/interlace/1/q/100" class=" lazyloaded" data-image-container=".feed-item-figure"></picture>
                                                 </a>
                                                 {%if feed.feed_type=="video"%}
                                                 <span class="video-play-button " data-playtxt="PLAY">
@@ -2652,9 +2652,9 @@
                                             <div class="img-wrap">
                                                 <a href="/p/{{feed.post1_id}}">
                                                     <picture>
-                                                        <source srcset="{{feed.post1_cover}}" media="(max-width: 375px)">
-                                                        <source srcset="{{feed.post1_cover}}" media="(min-width: 376px)">
-                                                        <img data-default-src="{{feed.post1_cover}}" class=" lazyloaded" data-image-container=".feed-item-figure"></picture>
+                                                        <source srcset="{{feed.post1_cover}}?imageView2/1/w/678/h/272/interlace/1/q/100" media="(max-width: 375px)">
+                                                        <source srcset="{{feed.post1_cover}}?imageView2/1/w/678/h/272/interlace/1/q/100" media="(min-width: 376px)">
+                                                        <img data-default-src="{{feed.post1_cover}}?imageView2/1/w/678/h/272/interlace/1/q/100" class=" lazyloaded" data-image-container=".feed-item-figure"></picture>
                                                 </a>
                                                 {%if feed.feed_type=="video"%}
                                                 <span class="video-play-button " data-playtxt="PLAY">
@@ -2725,9 +2725,9 @@
                                                     <div class="img-wrap">
                                                         <a href="http://espndeportes.espn.go.com/futbol/espana/nota/_/id/2740669/neymar-avala-a-gabriel-jesus-pide-respeto-por-su-vida-privada">
                                                             <picture>
-                                                                <source srcset="{{feed.post1_cover}}">
-                                                                <source srcset="{{feed.post1_cover}}" media="(min-width: 320px)">
-                                                                <img data-default-src="{{feed.post1_cover}}" class=" lazyload" data-image-container=".feed-item-figure"></picture>
+                                                                <source srcset="{{feed.post1_cover}}?imageView2/1/w/208/h/117/interlace/1/q/100">
+                                                                <source srcset="{{feed.post1_cover}}?imageView2/1/w/208/h/117/interlace/1/q/100" media="(min-width: 320px)">
+                                                                <img data-default-src="{{feed.post1_cover}}?imageView2/1/w/208/h/117/interlace/1/q/100" class=" lazyload" data-image-container=".feed-item-figure"></picture>
                                                         </a>
                                                         {%if feed.feed_type=="video"%}
                                                 <span class="video-play-button " data-playtxt="PLAY">
@@ -2810,9 +2810,9 @@
                                                     <div class="img-wrap external">
                                                         <a target="_blank" href="/p/{{feed.post1_id}}">
                                                             <picture>
-                                                                <source srcset="{{feed.post1_cover}}" media="(max-width: 413px)">
-                                                                <source srcset="{{feed.post1_cover}}" media="(min-width: 414px)">
-                                                                <img data-default-src="{{feed.post1_cover}}" class=" lazyload" data-image-container=".feed-item-figure"></picture>
+                                                                <source srcset="{{feed.post1_cover}}?imageView2/1/w/202/h/114/interlace/1/q/100" media="(max-width: 413px)">
+                                                                <source srcset="{{feed.post1_cover}}?imageView2/1/w/202/h/114/interlace/1/q/100" media="(min-width: 414px)">
+                                                                <img data-default-src="{{feed.post1_cover}}?imageView2/1/w/202/h/114/interlace/1/q/100" class=" lazyload" data-image-container=".feed-item-figure"></picture>
                                                         </a>
                                                         {%if feed.feed_type=="video"%}
                                                 <span class="video-play-button " data-playtxt="PLAY">
@@ -2858,9 +2858,9 @@
                                                     <div class="img-wrap external">
                                                         <a target="_blank" href="/p/{{feed.post2_id}}">
                                                             <picture>
-                                                                <source srcset="{{feed.post2_cover}}" media="(max-width: 413px)">
-                                                                <source srcset="{{feed.post2_cover}}" media="(min-width: 414px)">
-                                                                <img data-default-src="{{feed.post2_cover}}" class=" lazyload" data-image-container=".feed-item-figure"></picture>
+                                                                <source srcset="{{feed.post2_cover}}?imageView2/1/w/202/h/114/interlace/1/q/100" media="(max-width: 413px)">
+                                                                <source srcset="{{feed.post2_cover}}?imageView2/1/w/202/h/114/interlace/1/q/100" media="(min-width: 414px)">
+                                                                <img data-default-src="{{feed.post2_cover}}?imageView2/1/w/202/h/114/interlace/1/q/100" class=" lazyload" data-image-container=".feed-item-figure"></picture>
                                                         </a>
                                                         {%if feed.feed_type=="video"%}
                                                 <span class="video-play-button " data-playtxt="PLAY">
@@ -2901,9 +2901,9 @@
                                                     <div class="img-wrap external">
                                                         <a target="_blank" href="/p/{{feed.post3_id}}">
                                                             <picture>
-                                                                <source srcset="{{feed.post3_cover}}" media="(max-width: 413px)">
-                                                                <source srcset="{{feed.post3_cover}}" media="(min-width: 414px)">
-                                                                <img data-default-src="{{feed.post3_cover}}" class=" lazyload" data-image-container=".feed-item-figure"></picture>
+                                                                <source srcset="{{feed.post3_cover}}?imageView2/1/w/202/h/114/interlace/1/q/100" media="(max-width: 413px)">
+                                                                <source srcset="{{feed.post3_cover}}?imageView2/1/w/202/h/114/interlace/1/q/100" media="(min-width: 414px)">
+                                                                <img data-default-src="{{feed.post3_cover}}?imageView2/1/w/202/h/114/interlace/1/q/100" class=" lazyload" data-image-container=".feed-item-figure"></picture>
                                                         </a>
                                                         {%if feed.feed_type=="video"%}
                                                 <span class="video-play-button " data-playtxt="PLAY">
@@ -2962,9 +2962,9 @@
                                                     <div class="img-wrap">
                                                         <a href="/p/{{feed.post1_id}}">
                                                             <picture>
-                                                                <source srcset="{{feed.post1_cover}}" media="(max-width: 413px)">
-                                                                <source srcset="{{feed.post1_cover}}" media="(min-width: 414px)">
-                                                                <img data-default-src="{{feed.post1_cover}}" class=" lazyload" data-image-container=".feed-item-figure"></picture>
+                                                                <source srcset="{{feed.post1_cover}}?imageView2/1/w/312/h/176/interlace/1/q/100" media="(max-width: 413px)">
+                                                                <source srcset="{{feed.post1_cover}}?imageView2/1/w/312/h/176/interlace/1/q/100" media="(min-width: 414px)">
+                                                                <img data-default-src="{{feed.post1_cover}}?imageView2/1/w/312/h/176/interlace/1/q/100" class=" lazyload" data-image-container=".feed-item-figure"></picture>
                                                         </a>
                                                         {%if feed.feed_type=="video"%}
                                                 <span class="video-play-button " data-playtxt="PLAY">
@@ -3022,9 +3022,9 @@
                                                     <div class="img-wrap">
                                                         <a href="/p/{{feed.post2_id}}">
                                                             <picture>
-                                                                <source srcset="{{feed.post2_cover}}" media="(max-width: 413px)">
-                                                                <source srcset="{{feed.post2_cover}}" media="(min-width: 414px)">
-                                                                <img data-default-src="{{feed.post2_cover}}" class=" lazyload" data-image-container=".feed-item-figure"></picture>
+                                                                <source srcset="{{feed.post2_cover}}?imageView2/1/w/312/h/176/interlace/1/q/100" media="(max-width: 413px)">
+                                                                <source srcset="{{feed.post2_cover}}?imageView2/1/w/312/h/176/interlace/1/q/100" media="(min-width: 414px)">
+                                                                <img data-default-src="{{feed.post2_cover}}?imageView2/1/w/312/h/176/interlace/1/q/100" class=" lazyload" data-image-container=".feed-item-figure"></picture>
                                                         </a>
                                                         {%if feed.feed_type=="video"%}
                                                 <span class="video-play-button " data-playtxt="PLAY">
