--- a/static/css/main.css
+++ b/static/css/main.css
@@ -282,3 +282,7 @@ a:hover, a:focus {
 #global-header .container>h1 a {
     background-image: url("http://objdsnsh2.bkt.clouddn.com/logo-espn-82x20.png");
 }
+
+.news-feed-item h1 a:visited {
+    color: #1d1e1f;
+}
